# InteliSort

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  pyproject.toml  run.sh  run_db_init.sh
.github/workflows/: build-deploy-cloudrun.yml
app/: main.py  openapi.json
app/api/: intelisort.py
app/api/v1/: intelisort.py
app/api/v1/static/: kumyarb.csv
app/config/: config.py
app/db/: prisma.py  redis.py
app/function/: example.py  helper.py  model.py
app/function/validator/: data_import.py
app/model/: base_response.py  kumyarb.py  query.py
prisma/: schema.prisma
